# submodules-poc

./: .gitmodules  CMakeLists.txt  outer.cpp
